# butter

./: .gitignore  README.md  pyproject.toml
src/butter/: __main__.py  churn.py  git.py
src/butter/git/: __init__.py  codeowners.py  git.py
