[project]
name = "butter"
version = "0.1.0"
description = "Code churn detection"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gitpython>=3.1.43",
    "click>=8.1.7",
    "tqdm>=4.66.5",
    "pyarrow>=17.0.0",
    "fastparquet>=2024.5.0",
    "polars>=1.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.2",
]
